testdata/not_valid/table_kv_missing_semicolon_2.out
error: testdata/not_valid/table_kv_missing_semicolon_2.kevs:2: scan: integer or boolean value does not end with semicolon
