testdata/not_valid/table_kv_missing_semicolon_2.kevs
x = {
  a = 123
  b = 321;
};
